log
Sat, May 17, 2025  3:23:23 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Sat, May 17, 2025  3:27:38 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
cc1.exe: all warnings being treated as errors
f0c1d11
Sat, May 17, 2025  3:28:07 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
cc1.exe: all warnings being treated as errors
537d049
Sat, May 17, 2025  3:28:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
869cb82
Sat, May 17, 2025  3:37:44 PM: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
fde8b8c
Sat, May 17, 2025  3:39:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3b24c56
Sat, May 17, 2025  3:42:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e88ff4a
Sat, May 17, 2025  3:43:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b0a810
Sat, May 17, 2025  3:46:46 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
d51c6d4
Sat, May 17, 2025  3:50:24 PM: 
 sudoku.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
 tests:  6|2
total_score: 45/70
c7b365a
Sat, May 17, 2025  3:52:46 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
e046025
Sat, May 17, 2025  4:04:07 PM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:126:5: error: invalid use of void expression
     Node* aux = (Node*) pop(stack);
     ^~~~
sudoku.c:136:22: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
       current = next(current);
                      ^~~~~~~
In file included from test.c:4:0:
list.h:17:7: note: expected 'List * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void* next(List* list);
       ^~~~
cc1.exe: all warnings being treated as errors
c2702fc
Sat, May 17, 2025  4:09:10 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:126:5: error: invalid use of void expression
     Node* aux = (Node*) pop(stack);
     ^~~~
sudoku.c:133:24: error: dereferencing pointer to incomplete type 'List {aka struct List}'
     Node* current = adj->first;
                        ^~
sudoku.c:136:24: error: 'Node {aka struct <anonymous>}' has no member named 'next'
       current = current->next;
                        ^~
5e86dea
